[FIXED #1, #10] Body font size is 18pt. All the 'start over' buttons were renamed and relocated to help with layout issues when font size increased drastically.

--- a/Other/iCY/style/common.css
+++ b/Other/iCY/style/common.css
@@ -6,11 +6,29 @@ margin: 0 auto;
 }
 
 #instructionLabel {
-	font-size:12px;
+	font-size:12pt;
 }
 
 body {
-	font-size:18px;
+	font-size:18pt;
+}
+
+/*.centreMargin{
+	margin-right:20%;
+	margin-left: 20%;
+}*/
+
+.cancelBtn{
+	position:absolute;
+    bottom:0;
+    left:0;
+}
+
+.doneBtn{
+	position:absolute;
+    bottom:0;
+    right:0;
+    width: 70%;
 }
 
 .button {
